fix a few htmls

--- a/2/index.html
+++ b/2/index.html
@@ -20,7 +20,7 @@ To visit this room, press <b>TAB</b> from within JanusVR, and paste the url of t
 
 #Screen for the 360 degree image/video/gif/websurface
 
-<AssetObject id="Mercator_Projection_Screen" src="Mercator_Projection_Screen.obj" />
+<AssetObject id="Mercator_Projection_Screen" src="Mercator_Projection_Screen.obj.gz" />
 
 #Skybox cubemap images 
 
