--- a/1/index.html
+++ b/1/index.html
@@ -17,7 +17,7 @@
     display:none;
 }
 </style>
-<script src="https://web.janusvr.com/janusweb.js"></script>
+<script src="https://web.janusxr.org/janusweb.js"></script>
 <script>
 elation.janusweb.init({
         url: document.location.href,
