--- a/2/index.html
+++ b/2/index.html
@@ -66,7 +66,7 @@ To visit this room, press <b>TAB</b> from within JanusVR, and paste the url of t
     display:none;
 }
 </style>
-<script src="https://web.janusvr.com/janusweb.js"></script>
+<script src="https://web.janusxr.org/janusweb.js"></script>
 <script>
 elation.janusweb.init({
         url: document.location.href,
