--- a/4/index.html
+++ b/4/index.html
@@ -42,7 +42,7 @@
  </Room>
 </FireBoxRoom>
 -->
-<script src="https://web.janusvr.com/janusweb.js"></script>
+<script src="https://web.janusxr.org/janusweb.js"></script>
 <script>elation.janusweb.init({url: document.location.href})</script>
 </body>
 </html>
