--- a/5/index.html
+++ b/5/index.html
@@ -8,7 +8,7 @@
 <AssetVideo id="bottom" src="bottom.mp4" auto_play="true" loop="true" />
 </Assets>
 <Room pos="0 0 0" xdir="1 0 0" ydir="0 1 0" zdir="0 0 1">
-<Object id="screen" js_id="0" pos="0 26.35 0" scale="10 10 10" lighting="false" video_id="top" displacementmap_id="bottom" />
+<Object id="screen" js_id="0" pos="0 26.35 0" scale="1 1 1" lighting="false" video_id="top" displacementmap_id="bottom" />
 </Room>
 </FireBoxRoom>
 -->
@@ -23,7 +23,7 @@
 elation.janusweb.init({
         url: document.location.href,
         showchat: false,
-        shownavigation: false,
+        shownavigation: true,
         usevoip: false,
         picking: false,});
 </script>
