--- a/5/index.html
+++ b/5/index.html
@@ -3,12 +3,12 @@
 <!--
 <FireBoxRoom>
 <Assets>
-<AssetObject id="screen" src="spherescreen-large.obj.gz" />
+<AssetObject id="screen" src="videosphere.gltf" />
 <AssetVideo id="top" src="top.mp4" auto_play="true" loop="true" />
 <AssetVideo id="bottom" src="bottom.mp4" auto_play="true" loop="true" />
 </Assets>
 <Room pos="0 0 0" xdir="1 0 0" ydir="0 1 0" zdir="0 0 1">
-<Object js_id="0" pos="0 26.35 0" scale=".1 .1 .1" lighting="false" video_id="top" displacementmap_id="bottom" />
+<Object id="screen" js_id="0" pos="0 26.35 0" scale="10 10 10" lighting="false" video_id="top" displacementmap_id="bottom" />
 </Room>
 </FireBoxRoom>
 -->
