--- a/5/index.html
+++ b/5/index.html
@@ -3,7 +3,7 @@
 <!--
 <FireBoxRoom>
 <Assets>
-<AssetObject id="screen" src="videosphere.gltf" />
+<AssetObject id="screen" src="spherescreen-medium.obj" />
 <AssetVideo id="top" src="top.mp4" auto_play="true" loop="true" />
 <AssetVideo id="bottom" src="bottom.mp4" auto_play="true" loop="true" />
 </Assets>
