--- a/5/index.html
+++ b/5/index.html
@@ -5,10 +5,10 @@
 <Assets>
 <AssetObject id="screen" src="spherescreen-medium.obj" />
 <AssetVideo id="top" src="top.mp4" auto_play="true" loop="true" />
-<AssetVideo id="bottom" src="bottom.mp4" auto_play="true" loop="true" />
+<AssetVideo id="bottom.mp4" src="bottom.mp4" auto_play="true" loop="true" />
 </Assets>
 <Room pos="0 0 0" xdir="1 0 0" ydir="0 1 0" zdir="0 0 1">
-<Object id="screen" js_id="0" pos="0 26.35 0" scale="10 10 10" lighting="false" video_id="top" displacementmap_id="bottom" />
+<Object id="screen" js_id="0" pos="0 26.35 0" scale="10 10 10" lighting="false" video_id="top" displacementmap_id="bottom.mp4" />
 </Room>
 </FireBoxRoom>
 -->
